--- a/package.json
+++ b/package.json
@@ -3,19 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-
   "homepage": "https://thapasujan.github.io/Personal_Portfolio",
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
-
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -23,7 +19,6 @@
     "react-intersection-observer": "^10.0.2",
     "react-router-dom": "^7.11.0"
   },
-
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
@@ -33,11 +28,10 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
-    "vite": "^7.2.4",
-
-    "gh-pages": "^6.1.1"
+    "vite": "^7.2.4"
   }
 }
